--- a/_posts/2022-05-16-Prisoner.md
+++ b/_posts/2022-05-16-Prisoner.md
@@ -4,7 +4,7 @@ Prisoner is an executable and library written in Rust to model the prisoners dil
 
 Prisoner is not yet available as a crate, but can be run as a container.
 
-GitHub: https://github.com/iancullinane/prisoner-rust
+[GitHub link](https://github.com/iancullinane/prisoner-rust)
 
 # eignhpants/prisoner
 
