new post, add tags

--- a/_posts/2022-05-16-Prisoner.md
+++ b/_posts/2022-05-16-Prisoner.md
@@ -1,6 +1,7 @@
 ---
 title: Prisoner
 subtitle: A rust library for modeling the prisoners dilemna
+tags: rust docker game-theory
 ---
 
 Prisoner is an executable and library written in Rust to model the prisoners dilemna. Currently supports basic personalities as well as a round-robin style tournament system for pitting n+2 entities against each other.
