--- a/_posts/2022-05-16-Prisoner.md
+++ b/_posts/2022-05-16-Prisoner.md
@@ -4,7 +4,7 @@ subtitle: A rust library for modeling the prisoners dilemna
 tags: rust docker game-theory
 ---
 
-Prisoner is an executable and library written in Rust to model the prisoners dilemna. Currently supports basic personalities as well as a round-robin style tournament system for pitting n+2 entities against each other.
+Prisoner is an executable and library written in Rust to model the prisoners dilemma. Currently supports basic personalities as well as a round-robin style tournament system for pitting n+2 entities against each other.
 
 Prisoner is not yet available as a crate, but can be run as a container.
 
